# easyclimate-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: AutoPushToPypi.yml  ci.yml  ci_build.yml
python/easyclimate_rust/fastbarnes/: interpolation.py  interpolationS2.py
python/easyclimate_rust/fastbarnes/util/: __init__.py
readme/: README_ja_JP.md  README_zh_CN.md
scripts/: build_macos_wheel.sh  build_manylinux_wheel.sh  build_manywindows_wheel.ps1  build_single_wheel_linux.sh  build_single_wheel_macos.sh  build_single_wheel_windows.ps1
src/: barnes.rs  barnes_s2.rs  detrend_spatial.rs  interp1d.rs  lambert.rs  lib.rs  rvdv.rs  sphere_laplacian.rs  vibeta.rs  wet_bulb.rs
