[package]
name = "easyclimate_rust"
version = "2026.5.1"
edition = "2024"

[lib]
name = "easyclimate_rust"
# "cdylib" is used to create dynamic libraries that can be imported by Python.
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
rayon = "1.11"
numpy = "0.28"
ndarray = "0.17"

[profile.release]
opt-level = 3
lto = true           # Link-Time Optimization
codegen-units = 1    # Better optimization, slower compile
panic = "abort"         # Smaller binary size
strip = true            # Strip symbols from binary

[profile.release.package."*"]
opt-level = 3

[dev-dependencies]
criterion = "0.5"
