[package]
name = "easyclimate_rust"
version = "2026.4.0"
edition = "2024"

[lib]
name = "easyclimate_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
rayon = "1.11"
numpy = "0.28"
ndarray = "0.17"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
overflow-checks = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[profile.dev]
opt-level = 1
debug = true
incremental = true
overflow-checks = true

[profile.dev.package."*"]
opt-level = 2

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true
incremental = false
overflow-checks = false